# Change Log
All notable changes to this project will be documented in this file.

## [3.0.11] - 2017-04-06
# Fixed
- Random options were showed as active in the robot's greetings message.

## [3.0.10] - 2017-03-27
# Added
- better scm version support in setup.py and version display in status page

## [3.0.9] - 2017-03-23
# Added
- Fallback to two 2-way merge in case of conflict during 3-way octopus merge
# Fixed
- Bert-E does not crash when an argument is given to the status command in pull requets

## [3.0.8] - 2017-03-16
# Added
- Bert-E supports GitHub (except for tasks, author approvals and unanimity option)
- Comment.delete() is specified in the abstract githost API + the github implementation
- need_author_approval optional configuration key (defaulting to true)
# Changed
- Pull request author is optional during filtered scans, with sensible default values

## [3.0.7] - 2017-03-08
# Changed
- Refactoring: BertE is now a long-living job dispatching service.

## [3.0.6] - 2017-03-07
# Fixed
- Reset: do not crash when bitbucket fails
- Reset: check existence of branches

## [3.0.5] - 2017-03-06
# Added
- Implement GitHub API
- Git Host API allows to filter on pull request status
- Add explicit message when using a command with a wrong syntax
- Implement reset and force_reset commands
# Changed
- Refactoring: the bert_e.utils module became the bet_e.lib package
- System tests now use the abstract git_host API

## [3.0.4] - 2017-02-16
# Fixed
- Bert-E specifically handles the case where the destination of a PR is archived/deleted
# Added
- Provide the url to failed builds in pull requests

## [3.0.3] - 2017-02-15
# Fixed
- Filter on open pull requests only to avoid getting stuck in a loop
- Fixed conflict resolution instructions on non-pushed integration branches

## [3.0.2] - 2017-02-13
# Changed
- Bitbucket API HTTP calls were optimized to avoid full-scan (and throttling by Bitbucket)
- Made approval messages less verbose
# Added